[package]
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
name    = "substrater"
version = "0.1.0"

[dependencies]
# crates.io
array-bytes        = { version = "0.3.0", path = "../subalfred/array-bytes" }
async-std          = { version = "1.8.0", features = ["attributes", "unstable"] }
async-tungstenite  = { version = "0.10.0", features = ["async-native-tls"] }
futures            = "0.3.8"
futures-lite       = "1.11.3"
isahc              = "0.9.14"
parity-scale-codec = { version = "1.3.5", features = ["derive"] }
pretty_env_logger  = "0.4.0"
serde              = { version = "1.0.118", features = ["derive"] }
serde_json         = "1.0.60"
subcryptor         = { version = "0.1.0", features = ["codec", "full-crypto"], path = "../subalfred/subcryptor" }
subhasher          = { version = "0.1.0", path = "../subalfred/subhasher" }
submetadatan       = { version = "0.1.0", features = ["codec", "simplify-metadata"], path = "../subalfred/submetadatan" }
subrpcer           = { version = "0.1.0", path = "../subalfred/subrpcer" }
substorager        = { version = "0.1.0", path = "../subalfred/substorager" }
thiserror          = "1.0.23"
tracing            = "0.1.22"
