[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "Substrate Client"
edition     = "2018"
homepage    = "https://substrater.l2ust.world"
license     = "GPL-3.0"
name        = "substrater"
readme      = "README.md"
repository  = "https://github.com/l2ust/substrater"
version     = "0.1.0"

[dependencies]
# crates.io
array-bytes        = { version = "0.3.0" }
async-std          = { version = "1.8.0", features = ["attributes", "unstable"] }
async-tungstenite  = { version = "0.10.0", features = ["async-native-tls"] }
futures            = { version = "0.3.8" }
futures-lite       = { version = "1.11.3" }
isahc              = { version = "0.9.14" }
parity-scale-codec = { version = "1.3.5", features = ["derive"] }
pretty_env_logger  = { version = "0.4.0" }
serde              = { version = "1.0.118", features = ["derive"] }
serde_json         = { version = "1.0.60" }
subcryptor         = { version = "0.1.0", features = ["codec", "full-crypto"], path = "../subalfred/subcryptor" }
subhasher          = { version = "0.1.0", path = "../subalfred/subhasher" }
submetadatan       = { version = "0.1.0", features = ["codec", "simplify-metadata"], path = "../subalfred/submetadatan" }
subrpcer           = { version = "0.1.0", path = "../subalfred/subrpcer" }
substorager        = { version = "0.1.0", path = "../subalfred/substorager" }
thiserror          = { version = "1.0.23" }
tracing            = { version = "0.1.22" }
