[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "Substrate Client"
edition     = "2018"
homepage    = "https://substrater.l2ust.world"
license     = "GPL-3.0"
name        = "substrater"
readme      = "README.md"
repository  = "https://github.com/l2ust/substrater"
version     = "0.1.0"

[dependencies]
# crates.io
array-bytes        = { version = "1.1.0" }
async-std          = { version = "1.9.0", features = ["attributes", "unstable"] }
async-tungstenite  = { version = "0.13.1", features = ["async-native-tls"] }
futures            = { version = "0.3.15" }
futures-lite       = { version = "1.11.3" }
isahc              = { version = "1.4.0" }
parity-scale-codec = { version = "2.1.1", features = ["derive"] }
pretty_env_logger  = { version = "0.4.0" }
serde              = { version = "1.0.126", features = ["derive"] }
serde_json         = { version = "1.0.64" }
subcryptor         = { version = "0.2.0", features = ["codec", "full-crypto"] }
subhasher          = { version = "0.1.2" }
submetadatan       = { version = "0.1.7", features = ["codec", "simplify-metadata"] }
subrpcer           = { version = "0.2.1" }
substorager        = { version = "0.1.6" }
thiserror          = { version = "1.0.24" }
tracing            = { version = "0.1.26" }
